# IPLWebScrape

./: README.md
iplwebscraper/: extracted_data.csv  pyproject.toml  transformed_data.csv
iplwebscraper/dags/: ipl_extract_and_transform.py
iplwebscraper/data/: ipl_2022.db  transformed_data.csv
iplwebscraper/iplwebscraper/: extract.py  ipl_extract_and_transform.py  transform.ipynb  transform.py
iplwebscraper/src/: extract.py  load.py  transform.py
iplwebscraper/tests/: matchresults.html  test_extract.py  test_iplwebscraper.py  test_transform.py
