[tool.poetry]
name = "iplwebscraper"
version = "0.1.0"
description = ""
authors = ["Eleanor Bracegirdle <eleanor.bracegirdle@bjss.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.3.0"
pandas = "^1.4.3"
lxml = "^4.9.1"
apache-airflow = "^2.3.3"
pylint = "^2.14.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
